fix: white on white on mobile device

--- a/public/fonts/index.css
+++ b/public/fonts/index.css
@@ -16,3 +16,6 @@
   font-style: normal;
   src: local('CircularStd'), url('CircularStd-Bold.otf') format('opentype');
 }
+.walletconnect-modal__mobile__toggle a {
+  color: black;
+}
